# PaperTinder

./: .env.example  .gitignore  config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  vercel.json
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: AdminPage.jsx  App.jsx  AuthContext.jsx  MobileApp.jsx  index.css  main.jsx  mobile.css  summaryPrefetcher.js  usePreferences.js  usePreferences.jsx
frontend/src/components/: CompletionScreen.jsx  ExportModal.jsx  LoginButton.jsx  PaperCard.jsx  ProgressBar.jsx  ReadingList.jsx  SearchBar.jsx  StreakBadge.jsx  SwipeStack.jsx  VenueSettings.jsx
frontend/src/components/mobile/: BottomNav.jsx  MobileHeader.jsx  MobilePaperCard.jsx  MobileProgress.jsx  MobileSaved.jsx  MobileSearch.jsx  MobileSwipe.jsx
src/: app.py  models.py
src/services/: auth.py  notebooklm.py  openalex.py  pdf_processor.py  rate_limit.py  scrapbox.py  semantic_scholar.py  storage.py  summarizer.py  venues.py
