[project]
name = "paper-tinder"
version = "0.1.0"
description = "Tinder-like swipe UI for academic papers with Ochiai/Rekimoto format summaries"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.30.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.0",
    "upstash-redis>=1.0.0",
    "pdfminer.six>=20231228",
    "pypdfium2>=4.0.0",
    "Pillow>=10.0.0",
    "google-auth>=2.40.0",
]

[project.optional-dependencies]
local = [
    "pymupdf>=1.24.0",
    "pymupdf4llm>=0.0.17",
    "semanticscholar>=0.8.4",
    "markitdown[pdf]>=0.1.0",
]
notebooklm = [
    "notebooklm-py[browser]>=0.3.0",
]
